changed some spacing in landing + changed json carousel to js implementation

--- a/styles.css
+++ b/styles.css
@@ -1513,7 +1513,7 @@ a {
     font-size: 2rem;
     font-weight: 200;
     line-height: 1.2;
-    padding: 0 27rem 0 0;
+    padding: 0 45vw 0 0;
     margin-bottom: 1.5rem;
     color: #000000;
 }
@@ -1659,7 +1659,7 @@ a {
     font-weight: 200;
     line-height: 2rem;
     margin-bottom: 1rem;
-    padding: 1rem 35rem 1rem 0;
+    padding: 1rem 40vw 1rem 0;
     color: #000000;
 }
 
