--- a/styles.css
+++ b/styles.css
@@ -2209,8 +2209,18 @@ a {
     max-width:70vw;
 }
 
-@media (max-width: 770px) {
-    
+@media (max-width: 1028px) {
+    .blog-cta {
+    margin: 0 0 0 1rem;
+    }
+}
+@media (max-width: 770px) { 
+    .blog-cta {
+    margin: 0;
+    }
+    .blog-cta.colaboracion h1{
+    font-size: 2rem;
+    }
     .blog-entry h2 {
         font-size: 1.7rem;
     }
@@ -3893,6 +3903,7 @@ width: 40vw;
     align-items: center;
 }
 .blog-cta.colaboracion h1{
+    font-size: 2.5rem;
     text-align: center;
     margin: 1rem 0;
     padding: 0;
@@ -3971,6 +3982,7 @@ width: 40vw;
         align-items: center;
         }
         .blog-cta.colaboracion h1{
+            font-size: 2rem;
             text-align: center;
             margin: 1rem 0;
             padding: 0;
