--- a/styles.css
+++ b/styles.css
@@ -723,6 +723,7 @@ a {
         padding: 7rem 3rem 0 0;
     }
     .main-hero-content {
+        margin: 7rem 0 0 0;
         display: flex;
         flex-direction: column; /* Default: side-by-side layout */
         align-items: flex-start;
@@ -1089,13 +1090,13 @@ a {
 /* ───────── cards ───────── */
 .card-container.landing .card {
   width: 40vw;
-  height: 60vh;
+  height: 70vh;
   position: sticky;
   top: 0;
   margin-top: 0;
   /* collapse reserved space so cards overlap */
   opacity: 0;
-  transform: translateY(60px);
+  transform: translateY(30px);
   transition: opacity 0.7s ease-out, transform 0.7s ease-out;
   /* z-index is still set via JS */
 }
@@ -1193,23 +1194,23 @@ a {
 }
 /* Responsive Adjustments for M */
 @media (max-width: 1028px) {
-    .card-container {
+    .cards-full .card-container.landing {
         display: flex;
         flex-direction: column; 
         justify-content: right; /* Align cards to the left */
         gap: 1rem; /* Reduce gap between cards */
-        padding: 3rem 0 4rem 20rem; /* Adjust padding for smaller screens */
+        padding: 5rem 0 4rem 0; /* Adjust padding for smaller screens */
     }
     .full-section.cards-full {
     display:flex;
     flex-direction: row; /* Align cards to the left */
     gap: 1rem; /* Reduce gap between cards */
-    padding: 2rem 4rem 20vh 4rem; /* Adjust padding for smaller screens */
+    padding: 2rem 4rem 0rem 4rem; /* Adjust padding for smaller screens */
     }
     .text-cards-landing{        
-        width: 50vw;
+        width: 45vw;
         margin: 0;
-        padding: 2rem 0 0 0;
+        padding: 2rem 1rem 0 0;
         text-align: left;
     }
     
@@ -1222,13 +1223,13 @@ a {
         color:#622d86;
     }
     .card-container.landing .card {
-        width: 40vw;
-        height: 85vh;
+        width: 45vw;
+        height: 76vh;
         position: sticky;
         top: 0;
         margin-top: 0;
         opacity: 0;
-        transform: translateY(60px);
+        transform: translateY(30px);
         transition: opacity 0.7s ease-out, transform 0.7s ease-out;
     }
     .card {
@@ -1359,12 +1360,14 @@ a {
         justify-content: left; /* Align cards to the left */
         gap: 1rem; /* Reduce gap between cards */
         padding: 0 0 0 4rem; /* Adjust padding for smaller screens */
-    }
+    }    
     .cards-full .card-container.landing .card {
         width: 80vw;
-        height: 50vh; /* Smaller card width for XS */
-        margin: 1rem 0;
+        height: 55vh; /* Smaller card width for XS */
+        margin: 1rem 0 2rem 0;
         padding: 1rem 2rem 1rem 1rem;
+        transform: translateY(30px);
+        transition: opacity 0.7s ease-out, transform 0.7s ease-out;
     }
     .card h3{
         font-size: 2rem;
@@ -1452,7 +1455,7 @@ a {
     .cards-full .card-container.landing .card {
         width: 80vw;
         height: 60vh; /* Smaller card width for XS */
-        margin: 1rem 0;
+        margin: 1rem 0 2rem 0;
         padding: 1rem 2rem 1rem 1rem;
     }
     .card h3{
@@ -1489,7 +1492,7 @@ a {
     .cards-full .card-container.landing .card {
         width: 80vw;
         height: 65vh; /* Smaller card width for XS */
-        margin: 1rem 0;
+        margin: 1rem 0 2rem 0;
         padding: 1rem 2rem 1rem 1rem;
     }
 }
@@ -3663,7 +3666,15 @@ width: 40vw;
     margin: 2rem 4rem;
     padding: 2rem 0;
     border-bottom: 4px solid rgb(98, 45, 134);
-}
+    }
+    .modal-content {
+    max-width: 80vw;
+    max-height: 75vh;
+    margin: auto;
+    display: block;
+    margin-top: 3rem;
+    border-radius: 10px;
+    }
 }
 
 @media (max-width: 480px) {
@@ -3727,18 +3738,46 @@ width: 40vw;
         margin: 0 2rem 1rem 2rem;
         font-size: 1.5rem;
     }    
-    .modal-content {
-        max-width: 80vw;
-        max-height: 80vh;
-        margin: 8rem 0 0 0;
-        display: block;
-        border-radius: 10px;
-    }
+    
     .cta-button-activismo {
         padding: 1rem 2rem;
         border-radius: 10px;
         text-decoration: none;
         min-width: 20vw;
+    }
+    .modal {
+        display: none;
+        position: fixed;
+        z-index: 1000;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.8);
+        text-align: center;
+        padding: 8rem 1.5rem;
+    }
+    .modal-content {
+        max-width: 80vw;
+        max-height: 80vh;
+        margin: 4rem 1rem 1rem 1rem;
+        display: flex;
+        flex-direction: column;
+        border-radius: 10px;
+    }
+    .left-arrow {
+        left: 5px;
+    }
+    .right-arrow {
+        right: 5px;
+    }
+    .close {
+        position: absolute;
+        top: 7rem;
+        right: 15px;
+        font-size: 40px;
+        color: white;
+        cursor: pointer;
     }
 }
 
