--- a/styles.css
+++ b/styles.css
@@ -2863,7 +2863,7 @@ width: 40vw;
         flex-direction: column;
         width: 80vw!important;
     }
-    .line-of-work .about-section.typetwo {
+    .line-of-work.typetwo .about-section {
         display:flex;
         flex-direction: column;
         width: 80vw!important;
@@ -4877,7 +4877,7 @@ width: 40vw;
         flex-direction: row;
         width: 90vw;
         height: auto;
-        padding: 2rem ;
+        padding: 2rem 2rem 2rem 0;
         margin: 0 0 2rem 0;
         box-shadow: none;
     }
@@ -4893,11 +4893,11 @@ width: 40vw;
     border-radius: 10px;
     max-width: 40vw;
     height: auto;
-    margin: 3rem;
+    margin: auto 3rem;
     padding: 0;
 }
 .about-text .card img.alejandra {
-    margin: 4rem 3rem;
+    margin: 7rem 3rem;
 }
 .about-text .card .about-us-card-text {
     text-align: justify;
@@ -4915,7 +4915,54 @@ width: 40vw;
     margin: 1rem 1rem 0 0;
 
 }
-
+@media (min-width: 1500px) {
+    .about-text .card-container {
+            min-width: 60vw;
+            padding: 0;
+            margin: 0 4rem 0 0;
+    }
+    .about-text .card-container .card{
+        justify-content: center;
+        display:flex;
+        flex-direction: row;
+        width: 90vw;
+        height: auto;
+        padding: 2rem 2rem 2rem 2rem;
+        margin: 0;
+    }
+    .about-text .card-container .card.typetwo {
+            display:flex;
+            flex-direction: row-reverse;
+            width: 90vw;
+            height: auto;
+            padding: 2rem 0 2rem 2rem;
+            margin: 0 0 2rem 0;
+    }
+    .about-text .card img {
+        border-radius: 10px;
+        min-width: auto;
+        max-height: 60vh;
+        margin: auto 1rem;
+        padding: 0;
+    }
+    .about-text .card img.alejandra {
+        margin: auto 3rem;
+    }
+    .about-text .card h3{
+    max-width: 40vw;
+    font-size: 2.5rem;
+    }
+    .about-text .card p{
+        max-width: 40vw;
+        font-size: 2.5rem;
+        margin: 1rem 1rem 0 0;
+    }
+    .about-text .role-title{
+    color:#622d86;
+    font-family: 'Hewitt-Cooper', sans-serif !important;
+    font-size: 2.5rem;
+    }
+}
 @media (max-width: 1380px) {
     .about-text .card-container {
             min-width: 60vw;
@@ -5066,13 +5113,13 @@ width: 40vw;
         border-radius: 10px;
         min-width: auto;
         max-height: 60vh;
-        margin: 6rem 1rem;
+        margin: auto 1rem;
         padding: 0;
     }
     .about-text .card img.alejandra {
         margin: 9rem 3rem;
     }
-     .about-text .card img.camilao {
+    .about-text .card img.camilao {
         margin: 5rem 3rem;
     }
     .about-text .card .about-us-card-text {
@@ -5162,13 +5209,20 @@ width: 40vw;
             height: auto;
             padding: 0;
             margin: 0;
-        }
+    }
+    .about-text .card img {
+        border-radius: 10px;
+        min-width: auto;
+        max-height: 40vh;
+        margin: auto 1rem;
+        padding: 0;
+    }
     .about-text .card img.alejandra {
         margin: 7rem 3rem;
     }
     
     .about-text .card img.tatiana {
-        margin: 9rem 1rem;
+        margin: 6rem 1rem;
     }
     .about-text .card .about-us-card-text {
         max-width: 40vw;
@@ -5221,7 +5275,6 @@ width: 40vw;
         padding: 0 2rem 0 1rem;
         margin:0;
     }
-
     .about-text {
         margin: 2rem 1rem;
         padding: 0;
@@ -5229,7 +5282,7 @@ width: 40vw;
     .about-text h2{
         text-align: center;
         font-size: 1.5rem;
-        padding: 2rem 3rem 0 1rem;
+        padding: 2rem 3rem 0 3rem;
         margin:0;
     }
     .about-text .role-title{
@@ -5239,9 +5292,10 @@ width: 40vw;
     font-size: 1.2rem;
     }
     .about-text p{
+        text-align: justify;
         font-size: 1.5rem;
-        padding: 1rem 3rem 2rem 1rem;
-        margin:0;
+        padding: 1rem 2rem 2rem 1rem;
+        margin: 0 0 2rem 0;
     }
     .about-text .cta-button {
         padding: 0.5rem 1rem;
@@ -5255,11 +5309,16 @@ width: 40vw;
         padding: 0;
         margin: 0 ;
     }
+     .about-text .card-container h2{
+        text-align: center;
+        padding: 0;
+        margin: 0 4rem 0 0;
+       }
     .about-text .card-container .card{
         display:flex;
         flex-direction: column;
         min-width: 50vw;
-        padding: 1rem 1.5rem;
+        padding: 1rem 1rem;
         margin: 1rem 0 1rem 0;
     }
     .about-text .card-container .card.typetwo{
@@ -5273,7 +5332,7 @@ width: 40vw;
     .about-text .card-container .card img {
         max-width:80vw;
         min-width: auto;
-        margin: 1rem 0;
+        margin: 1rem 1rem;
     }
     .about-text .card .about-us-card-text {
         max-width: 80vw;
@@ -5295,7 +5354,13 @@ width: 40vw;
 
 @media (max-width: 380px) {
     .about-text p {
-        padding: 0 1.5rem 0 1rem;
+        text-align: justify;
+        padding: 0 1.5rem 2rem 1rem;
+        margin: 0;
+    }
+    .about-text h2{
+        text-align: center;
+        padding: 0 1.5rem 2rem 1rem;
         margin: 0;
     }
     .about-text .card-container {
@@ -5303,7 +5368,7 @@ width: 40vw;
         margin: 0 ;
     }
     .about-text .card-container h2 {
-        margin:1rem 0 0 2rem;
+        margin:1rem 2rem 0 0;
         font-size: 1.5rem;
     }
     .about-text .card-container .card{
@@ -5320,7 +5385,7 @@ width: 40vw;
     
     .about-text .card-container .card img {
         min-width: 50vw;
-        margin: 1rem 0;
+        margin: 1rem 1rem;
     }
     .about-text .card-container .card h3 {
         text-align: left;
@@ -5342,6 +5407,21 @@ width: 40vw;
     }    
     .about-text .card .about-us-card-text {
     max-width: 90vw;
+    }
+}
+@media (max-width: 325px) {
+    .about-text p {
+        text-align: justify;
+        padding: 0 1.5rem 2rem 1rem;
+        margin: 0;
+    }
+    .about-text .card-container h2 {
+        margin:1rem 2rem 0 0;
+        font-size: 1.5rem;
+    }
+    .about-text .card .about-us-card-text {
+    max-width: 90vw;
+    margin: 0;
     }
 }
 /*//////////////////////////////////////////////////////////////////////////////////////*/
