--- a/styles.css
+++ b/styles.css
@@ -44,6 +44,7 @@ body {
 }
 
 main {
+    overflow-x: hidden;
     min-width: 100vw;
     min-height: auto;
     /* overflow-x: hidden; REMOVED to fix sticky positioning */
@@ -137,7 +138,6 @@ a {
         overflow-x: hidden;
         padding: 0.5rem 0 1.5rem 0;
         margin: 0 0 5rem 0;
-
     }
 
     .full-section-wrapper.hero-image {
@@ -155,7 +155,7 @@ a {
 
 /* General Container Responsiveness */
 .container {
-    width: 100vw;
+    width: 100%;
     /* Makes containers fluid and adaptable */
     max-width: 1200px;
     /* Prevents overly wide layouts */
@@ -362,7 +362,7 @@ a {
         margin: 0;
         left: -2rem;
         right: 0;
-        min-width: 100vw;
+        min-width: 100%;
         min-height: 100vh;
         color: #000000;
         border: 1.5px solid #000000;
@@ -1519,7 +1519,6 @@ a {
         margin: 0;
         /* Remove individual margins, rely on gap */
         padding: 1rem 2rem 1rem 1rem;
-        transform: translateY(30px);
         transition: opacity 0.7s ease-out, transform 0.7s ease-out;
     }
 
@@ -6865,7 +6864,6 @@ img.animate {
 }
 
 /* Stacking Cards Animation */
-/* Stacking Cards Animation */
 .card-container.landing .full-section-wrapper {
     position: sticky;
     display: block;
@@ -6885,6 +6883,7 @@ img.animate {
 .card-container.landing .full-section-wrapper:nth-child(2) {
     top: 15vh;
     /* Same top to cover fully */
+    margin-bottom: 5vh;
     z-index: 2;
 }
 
