--- a/styles.css
+++ b/styles.css
@@ -1156,7 +1156,7 @@ a {
 
 /* Card Container */
 .card-container {
-    min-width: 100vw;
+    min-width: 40vw;
     display: flex;
     flex-direction: column;
     align-items: left;
@@ -1186,14 +1186,15 @@ a {
     gap: 1rem;
     /* Reduce gap between cards */
     padding: auto;
+    width: auto;
     /* Adjust padding for smaller screens */
 }
 
 .full-section.cards-full-cta img {
-    border-radius: 20px;
-    max-width: 80vw;
+    border-radius: 25px;
+    max-width: 100vw;
     max-height: 150vh;
-    padding: 0;
+    padding: 4rem;
     margin: auto;
 }
 
@@ -1209,7 +1210,7 @@ a {
 }
 
 .text-cards-landing {
-    width: auto;
+    width: 40vw;
     margin: 0;
     padding: auto;
     text-align: left;
@@ -1263,7 +1264,7 @@ a {
 }
 
 .cta-cards {
-    padding: auto;
+    padding: 4rem;
 }
 
 .cta-cards p {
@@ -1408,7 +1409,7 @@ a {
         /* Align cards to the left */
         gap: 1rem;
         /* Consistent gap between cards */
-        padding: 0 4rem 2rem 12rem;
+        padding: 0 4rem;
         /* Adjust padding for smaller screens */
         margin: 0 4rem 0 0;
     }
@@ -1416,7 +1417,7 @@ a {
     .cards-full .card-container.landing .card {
         width: 25rem;
         /* Reduce card width for smaller screens */
-        min-height: 85vh;
+        min-height: 40vh;
         /* Allow expansion */
         height: auto;
     }
@@ -1501,13 +1502,15 @@ a {
     }
 
     .cards-full .card-container.landing {
+        width: 80vw;
         display: flex;
         flex-direction: column;
         justify-content: left;
         /* Align cards to the left */
         gap: 1rem;
         /* Consistent gap between cards */
-        padding: 0 0 0 4rem;
+        padding: 0;
+        margin: 0;
         /* Adjust padding for smaller screens */
     }
 
@@ -1620,13 +1623,15 @@ a {
     }
 
     .cards-full .card-container.landing {
+        width: 80vw;
         display: flex;
         flex-direction: column;
         justify-content: left;
         /* Align cards to the left */
         gap: 1rem;
         /* Reduce gap between cards */
-        padding: 0 0 0 4rem;
+        margin: 0;
+        padding: 0;
         /* Adjust padding for smaller screens */
     }
 
@@ -6879,12 +6884,12 @@ img.animate {
 .card-container.landing .full-section-wrapper:nth-child(2) {
     top: 15vh;
     /* Same top to cover fully */
-    margin-bottom: 5vh;
+    margin-bottom: 0;
     z-index: 2;
 }
 
 .card-container.landing .full-section-wrapper:nth-child(3) {
-    top: 15vh;
+    top: 5vh;
     /* Same top to cover fully */
     z-index: 3;
     margin-bottom: 0;
@@ -6894,7 +6899,7 @@ img.animate {
 .card-container.landing .card {
     padding: 2rem;
     width: 40vw;
-    min-height: 70vh;
+    min-height: 60vh;
     height: auto;
     margin-top: 0;
     opacity: 0;
@@ -6907,4 +6912,28 @@ img.animate {
 .card-container.landing .card.in-view {
     opacity: 1;
     transform: translateY(0);
+}
+
+@media (max-width: 770px) {
+
+    .card-container.landing .full-section-wrapper {
+        position: sticky;
+        display: block;
+        top: 15vh;
+        height: auto;
+        z-index: 1;
+        margin-bottom: 0;
+    }
+}
+
+@media (max-width: 480px) {
+
+    .card-container.landing .full-section-wrapper {
+        position: sticky;
+        display: block;
+        top: 15vh;
+        height: auto;
+        z-index: 1;
+        margin-bottom: 15vh;
+    }
 }
